2004-11-01  Jeffrey Stedfast  <fejj@novell.com>

	* em-account-editor.c: Change the labels back to the same as they
	were in 2.0

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* mail-folder-cache.c (real_flush_updates): 
	* em-message-browser.c (em_message_browser_new): 
	* em-mailer-prefs.c (em_mailer_prefs_construct): 
	* em-format-html-display.c (efhd_attachment_popup): 
	* em-folder-view.c (emfv_popup, emfv_list_done_message_selected) 
	(emfv_format_popup_event): 
	* em-folder-tree.c (emft_popup): 
	* em-folder-properties.c (emfp_dialog_got_folder): 
	* em-folder-browser.c (em_folder_browser_new): 
	* em-composer-utils.c (em_utils_reply_to_message): 
	* em-composer-prefs.c (em_composer_prefs_construct): 
	* em-account-editor.c (em_account_editor_construct): added hook
	docs, and cleaned up some of the hook point names.

2004-10-22  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-tree.c: Give the Rename item a different path than the
	Delete item.

2004-10-22  Not Zed  <NotZed@Ximian.com>

	* em-event.c (eme_target_free): duh, they're camel not gobjects.

	* em-folder-view.c (emfv_list_done_message_selected): added a
	message.reading event.

2004-10-22  Nat Friedman  <nat@novell.com>

	* em-event.c: Add a REPLY_ALL flag to the Message target.
	* em-composer-utils.c (em_utils_reply_to_message): Set the
	REPLY_ALL flag when appropriate.

2004-10-21  Not Zed  <NotZed@Ximian.com>

	* em-composer-utils.c (em_utils_reply_to_message): emit a
	'message.replying' event with a message target.

2004-10-21  Nat Friedman <nat@novell.com>

	* em-event.c (em_event_target_new_message): new target type for
	message-related events.

2004-10-21  Not Zed  <NotZed@Ximian.com>

	* em-folder-view.c (emfv_format_popup_event): put 'evolution' back
	in the popup hook names.

2004-10-19  JP Rosevear  <jpr@novell.com>

	* em-account-editor.c, em-composer-prefs.c, em-config.c,
	em-event.c, em-folder-browser.c, em-folder-properties.c,
	em-folder-tree.c, em-folder-view.c, em-format-hook.c,